# leclerc-parser

./: .gitignore  README.md  pyproject.toml
google-script/: fie_processor.gs
leclerc_parser/: __main__.py  order.py  product_in_order.py
scripts/: code_style.py
